# slambook2-for-mac-in-2025

./: README.md  direct_method.cpp
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  jointMap.cpp
ch5/stereoVision/: CMakeLists.txt  stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurvingFitting.cpp  g2oCurveFitting.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
ch9/: CMakelists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp  common.cpp  common.h  random.h  rotation.h
